# dotfiles

./: .gitignore  Brewfile  Brewfile.lock.json  README.md  setup.sh
.beads/: issues.jsonl
alacritty/config/alacritty/: alacritty.yml.symlink
awk/: blame.awk
config/alacritty/: alacritty.yml.symlink
functions/: c  git-fzf  git-merge-base-main
fzf/: _fzf_complete_spin.zsh  fzf.zsh
gems/meh/: Cargo.toml  install.sh
gems/meh/src/: error.rs  main.rs  tmux.rs
gems/meh/src/commands/: bg.rs  claude.rs  fg.rs  mod.rs
gems/utils/: README.md  utils.gemspec
gems/utils/lib/: utils.rb
gems/utils/templates/: ruby-script-tmpl.rb
gems/work/: work.gemspec
gems/work/lib/: work.rb
ghostty/.config/ghostty/: config
git/: .gitconfig  .gitignore  .stow-local-ignore  aliases.zsh  gitconfig.symlink  gitignore.symlink
git/templates/hooks/: ctags
homebrew/: install.sh
lua/: install.sh
macos/: install.sh  set-defaults.sh
nvim/: fzf.vim  install.sh
nvim/.config/nvim/: init.lua
nvim/after/plugin/: luasnip.lua
nvim/config/nvim/: init.lua.symlink  init.vim.symlink
nvim/runtime/ftplugin/: lua.vim  markdown.vim  proto.vim  ruby.vim  rust.vim
pi/: env.zsh  package.json
ruby/: .irbrc  aliases.zsh
script/: bootstrap  configure  install
spin/: install.sh
stow/: .stow-global-ignore
system/: _path.zsh  aliases.zsh  env.zsh
tmux/: .tmux.conf  aliases.zsh  install.sh  tmux.conf  tmux.conf.symlink
vim/: vimrc.symlink
yarn/: path.zsh
zk/: install.sh  path.zsh
zsh/: .zshrc  aliases.zsh  config.zsh  key-binding.zsh  prompt.zsh  zshrc.symlink
(+67 files in other folders)
