[package]
name = "meh"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to manage tmux background tasks"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
